--- a/FirstModule/packages/repositories.config
+++ b/FirstModule/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\FirstTask\packages.config" />
+  <repository path="..\SecondTask\packages.config" />
 </repositories>
