--- a/FirstModule/packages/repositories.config
+++ b/FirstModule/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\FirstTask\packages.config" />
   <repository path="..\SecondTask\packages.config" />
+  <repository path="..\ThirdTask\packages.config" />
 </repositories>
