--- a/FirstModule/ThirdTask/ThirdTask.csproj
+++ b/FirstModule/ThirdTask/ThirdTask.csproj
@@ -50,17 +50,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GithubClient.cs" />
+    <Compile Include="GithubQuery.cs" />
+    <Compile Include="GithubQueryProvider.cs" />
+    <Compile Include="GithubResponse.cs" />
+    <Compile Include="GithubTranslator.cs" />
+    <Compile Include="GithubRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestClient.cs" />
+    <Compile Include="Tests\QueryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
