--- a/FirstModule/ThirdTask/ThirdTask.csproj
+++ b/FirstModule/ThirdTask/ThirdTask.csproj
@@ -32,6 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.7.8.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.8\lib\net45\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -57,6 +65,9 @@
     <Compile Include="Classes\GithubResponse.cs" />
     <Compile Include="Classes\GithubTranslator.cs" />
     <Compile Include="Classes\GithubRepository.cs" />
+    <Compile Include="Interfaces\IGithubTranslator.cs" />
+    <Compile Include="Interfaces\IGithubClient.cs" />
+    <Compile Include="Interfaces\IRestClient.cs" />
     <Compile Include="Enums\ProcessingOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
