--- a/ThirdModule/FirstTask/FirstTask.csproj
+++ b/ThirdModule/FirstTask/FirstTask.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExecutionStatuses.cs" />
+    <Compile Include="PowerInfoTypes.cs" />
     <Compile Include="PowerManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
