--- a/FifthModule/FifthModule/FifthModule.csproj
+++ b/FifthModule/FifthModule/FifthModule.csproj
@@ -84,8 +84,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BarcodeManager.cs" />
+    <Compile Include="Classes\DocumentManager.cs" />
     <Compile Include="Classes\FileManager.cs" />
-    <Compile Include="Classes\StreamingScannerService.cs" />
+    <Compile Include="Classes\ScannerManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
