--- a/FifthModule/ScannerManager/App.config
+++ b/FifthModule/ScannerManager/App.config
@@ -3,4 +3,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
+  <appSettings>
+    <add key="inputPath" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\input"/>
+    <add key="outputPath" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\output"/>
+    <add key="tempPath" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\temporary"/>
+    <add key="corruptedPath" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\corrupted"/>
+    <add key="targetsSource" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\targets.json"/>
+  </appSettings>
 </configuration>
