--- a/FifthModule/ScannerManager/App.config
+++ b/FifthModule/ScannerManager/App.config
@@ -4,10 +4,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
-    <add key="inputPath" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\input"/>
-    <add key="outputPath" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\output"/>
-    <add key="tempPath" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\temporary"/>
-    <add key="corruptedPath" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\corrupted"/>
-    <add key="targetsSource" value="C:\Users\Semen_Shchedrin\Documents\Visual Studio 2013\Projects\Mentoring\FifthModule\ScannerManager\bin\Debug\targets.json"/>
+    <add key="outputPath" value="C:\Users\sches_000\Documents\WS\output"/>
+    <add key="tempPath" value="C:\Users\sches_000\Documents\WS\temporary"/>
+    <add key="corruptedPath" value="C:\Users\sches_000\Documents\WS\corrupted"/>
+    <add key="sourcesPath" value="C:\Users\sches_000\Documents\WS\sources.json"/>
+    <add key="logPath" value="C:\Users\sches_000\Documents\WS\log.txt"/>
   </appSettings>
 </configuration>
