--- a/FifthModule/ScannerManager/ScannerManager.csproj
+++ b/FifthModule/ScannerManager/ScannerManager.csproj
@@ -42,6 +42,9 @@
     <Reference Include="MigraDoc.RtfRendering, Version=1.32.4334.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
       <HintPath>..\packages\PDFsharp-MigraDoc-GDI.1.32.4334.0\lib\net20\MigraDoc.RtfRendering.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.4.8\lib\net45\NLog.dll</HintPath>
     </Reference>
@@ -77,6 +80,8 @@
     <Compile Include="Classes\BarcodeManager.cs" />
     <Compile Include="Classes\DocumentManager.cs" />
     <Compile Include="Classes\FileManager.cs" />
+    <Compile Include="Classes\FileManagerFactory.cs" />
+    <Compile Include="Classes\PathWatcher.cs" />
     <Compile Include="Classes\ScannerManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
