--- a/SixthModule/MessagingService/MessagingService.csproj
+++ b/SixthModule/MessagingService/MessagingService.csproj
@@ -46,8 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\DocumentReceiver.cs" />
+    <Compile Include="IMessager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Classes\SettingsPublisher.cs" />
+    <Compile Include="Classes\StatusReceiver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
