--- a/SixthModule/ScannerManager/packages.config
+++ b/SixthModule/ScannerManager/packages.config
@@ -3,6 +3,7 @@
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="NLog" version="4.4.8" targetFramework="net452" />
   <package id="PDFsharp-MigraDoc-GDI" version="1.32.4334.0" targetFramework="net452" />
+  <package id="RabbitMQ.Client" version="4.1.3" targetFramework="net452" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
   <package id="Topshelf.NLog" version="4.0.3" targetFramework="net452" />
   <package id="ZXing.Net" version="0.15.0" targetFramework="net452" />
