--- a/SixthModule/packages/repositories.config
+++ b/SixthModule/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CustomMessaging\packages.config" />
   <repository path="..\MessagingService\packages.config" />
   <repository path="..\ScannerManager\packages.config" />
 </repositories>
