--- a/SixthModule/ScannerManager/ScannerManager.csproj
+++ b/SixthModule/ScannerManager/ScannerManager.csproj
@@ -107,6 +107,12 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CustomMessaging\CustomMessaging.csproj">
+      <Project>{c23b74cd-1b9d-4184-b388-ce08702f3ad9}</Project>
+      <Name>CustomMessaging</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
