--- a/SixthModule/CustomMessaging/CustomMessaging.csproj
+++ b/SixthModule/CustomMessaging/CustomMessaging.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\DocumentPartition.cs" />
     <Compile Include="Classes\DocumentPublisher.cs" />
     <Compile Include="Classes\DocumentReceiver.cs" />
     <Compile Include="Classes\Settings.cs" />
