--- a/SixthModule/CustomMessaging/CustomMessaging.csproj
+++ b/SixthModule/CustomMessaging/CustomMessaging.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Classes\StatusPublisher.cs" />
     <Compile Include="Classes\StatusListener.cs" />
     <Compile Include="Interfaces\IPublisher.cs" />
-    <Compile Include="Interfaces\IReceiver.cs" />
+    <Compile Include="Interfaces\IListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceStatuses.cs" />
   </ItemGroup>
