--- a/SixthModule/MessagingService/MessagingService.csproj
+++ b/SixthModule/MessagingService/MessagingService.csproj
@@ -41,6 +41,7 @@
       <HintPath>..\packages\RabbitMQ.Client.4.1.3\lib\net451\RabbitMQ.Client.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
