--- a/SixthModule/CustomMessaging/CustomMessaging.csproj
+++ b/SixthModule/CustomMessaging/CustomMessaging.csproj
@@ -47,19 +47,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\DocumentPartition.cs" />
-    <Compile Include="Classes\DocumentPublisher.cs" />
-    <Compile Include="Classes\DocumentListener.cs" />
-    <Compile Include="Classes\Settings.cs" />
-    <Compile Include="Classes\SettingsPublisher.cs" />
-    <Compile Include="Classes\SettingsListener.cs" />
-    <Compile Include="Classes\Status.cs" />
-    <Compile Include="Classes\StatusPublisher.cs" />
-    <Compile Include="Classes\StatusListener.cs" />
+    <Compile Include="DTO\DocumentPartitionDTO.cs" />
+    <Compile Include="Publishers\DocumentPublisher.cs" />
+    <Compile Include="Listeners\DocumentListener.cs" />
+    <Compile Include="DTO\SettingsDTO.cs" />
+    <Compile Include="Publishers\SettingsPublisher.cs" />
+    <Compile Include="Listeners\SettingsListener.cs" />
+    <Compile Include="DTO\StatusDTO.cs" />
+    <Compile Include="Publishers\StatusPublisher.cs" />
+    <Compile Include="Listeners\StatusListener.cs" />
     <Compile Include="Interfaces\IPublisher.cs" />
     <Compile Include="Interfaces\IListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceStatuses.cs" />
+    <Compile Include="Enums\ServiceStatuses.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
