--- a/EightModule/ProfileSample/ProfileSample/ProfileSample.csproj
+++ b/EightModule/ProfileSample/ProfileSample/ProfileSample.csproj
@@ -137,6 +137,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DAL\ImgSource.cs">
       <DependentUpon>MyImgContext.tt</DependentUpon>
@@ -224,6 +225,7 @@
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Home\Index.js" />
     <Content Include="Scripts\jquery-2.2.0.js" />
     <Content Include="Scripts\jquery-2.2.0.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -251,6 +253,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Images\Upload.cshtml" />
+    <Content Include="Views\Images\Get.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
