--- a/TenthModule/UnityAOP/ScannerManager/ScannerManager.csproj
+++ b/TenthModule/UnityAOP/ScannerManager/ScannerManager.csproj
@@ -102,6 +102,8 @@
     <Compile Include="Classes\BarcodeManager.cs" />
     <Compile Include="Classes\DocumentManager.cs" />
     <Compile Include="Classes\FileManager.cs" />
+    <Compile Include="Interfaces\IScannerManager.cs" />
+    <Compile Include="Interfaces\IPathWatcher.cs" />
     <Compile Include="Interfaces\IFileManager.cs" />
     <Compile Include="Interfaces\IBarcodeManager.cs" />
     <Compile Include="Interfaces\IDocumentManager.cs" />
