--- a/TenthModule/UnityAOP/CustomMessaging/packages.config
+++ b/TenthModule/UnityAOP/CustomMessaging/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="NLog" version="4.4.10" targetFramework="net452" />
   <package id="RabbitMQ.Client" version="4.1.3" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net452" />
