--- a/TenthModule/PostSharpAOP/MessagingService/App.config
+++ b/TenthModule/PostSharpAOP/MessagingService/App.config
@@ -4,9 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <add key="outputPath" value="C:\Users\sches_000\Documents\WS\output" />
-    <add key="settingsFile" value="C:\Users\sches_000\Documents\WS\settings.json" />
-    <add key="statusesFile" value="C:\Users\sches_000\Documents\WS\statuses.txt" />
+    <add key="outputPath" value="C:\Users\Semen_Shchedrin\Documents\WS\output" />
+    <add key="settingsFile" value="C:\Users\Semen_Shchedrin\Documents\WS\settings.json" />
+    <add key="statusesFile" value="C:\Users\Semen_Shchedrin\Documents\WS\statuses.txt" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
