--- a/TenthModule/PostSharpAOP/ScannerManager/App.config
+++ b/TenthModule/PostSharpAOP/ScannerManager/App.config
@@ -4,7 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
-    <add key="sourcesPath" value="C:\Users\sches_000\Documents\WS\sources.json"/>
-    <add key="logPath" value="C:\Users\sches_000\Documents\WS\log.txt"/>
+    <add key="sourcesPath" value="C:\Users\Semen_Shchedrin\Documents\WS\sources.json"/>
+    <add key="logPath" value="C:\Users\Semen_Shchedrin\Documents\WS\log.txt"/>
   </appSettings>
 </configuration>
