--- a/TenthModule/PostSharpAOP/ScannerManager/ScannerManager.csproj
+++ b/TenthModule/PostSharpAOP/ScannerManager/ScannerManager.csproj
@@ -62,9 +62,6 @@
       <HintPath>..\packages\PostSharp.4.3.33\lib\net35-client\PostSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="PostSharp.Patterns.Common, Version=4.3.33.0, Culture=neutral, PublicKeyToken=e7f631e6ce13f078, processorArchitecture=MSIL">
-      <HintPath>..\packages\PostSharp.Patterns.Common.4.3.33\lib\net45\PostSharp.Patterns.Common.dll</HintPath>
-    </Reference>
     <Reference Include="PostSharp.Patterns.Diagnostics, Version=4.3.33.0, Culture=neutral, PublicKeyToken=e7f631e6ce13f078, processorArchitecture=MSIL">
       <HintPath>..\packages\PostSharp.Patterns.Diagnostics.4.3.33\lib\net40\PostSharp.Patterns.Diagnostics.dll</HintPath>
     </Reference>
@@ -117,6 +114,7 @@
     <None Include="Commands\uninstall.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="NLog.config" />
     <None Include="packages.config" />
     <None Include="ScannerManager.psproj" />
   </ItemGroup>
