--- a/TenthModule/PostSharpAOP/ScannerManager/packages.config
+++ b/TenthModule/PostSharpAOP/ScannerManager/packages.config
@@ -3,13 +3,9 @@
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="NLog" version="4.4.10" targetFramework="net452" />
   <package id="PDFsharp-MigraDoc-GDI" version="1.32.4334.0" targetFramework="net452" />
-  <package id="PostSharp" version="4.3.33" targetFramework="net452" developmentDependency="true" />
-  <package id="PostSharp.Patterns.Common" version="4.3.33" targetFramework="net452" developmentDependency="true" />
-  <package id="PostSharp.Patterns.Common.Redist" version="5.0.26-rc" targetFramework="net452" />
-  <package id="PostSharp.Patterns.Diagnostics" version="4.3.33" targetFramework="net452" developmentDependency="true" />
+  <package id="PostSharp" version="4.3.33" targetFramework="net452" />
+  <package id="PostSharp.Patterns.Diagnostics" version="4.3.33" targetFramework="net452" />
   <package id="PostSharp.Patterns.Diagnostics.NLog" version="4.3.33" targetFramework="net452" />
-  <package id="PostSharp.Patterns.Diagnostics.Redist" version="5.0.26-rc" targetFramework="net452" />
-  <package id="PostSharp.Redist" version="5.0.26-rc" targetFramework="net452" />
   <package id="RabbitMQ.Client" version="4.1.3" targetFramework="net452" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
   <package id="Topshelf.NLog" version="4.0.3" targetFramework="net452" />
