--- a/TenthModule/PostSharpAOP/ScannerManager/NLog.config
+++ b/TenthModule/PostSharpAOP/ScannerManager/NLog.config
@@ -3,10 +3,14 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<targets>
-		<target name="logfile" xsi:type="File" fileName="C:\Users\Semen_Shchedrin\Documents\WS\nlog.txt" />
+		<target name="asyncFile" xsi:type="AsyncWrapper">
+			<target name="logfile" xsi:type="File"
+			        fileName="C:\Users\Semen_Shchedrin\Documents\WS\nlog.txt" 
+			        layout="${date:format=yyyyMMddHHmmss} ${message}" />
+		</target>
 	</targets>
 
 	<rules>
-		<logger name="*" minlevel="Info" writeTo="logfile" />
+		<logger name="*" minlevel="Info" writeTo="asyncFile" />
 	</rules>
 </nlog>
