--- a/TenthModule/UnityAOP/MessagingService/packages.config
+++ b/TenthModule/UnityAOP/MessagingService/packages.config
@@ -3,6 +3,8 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="NLog" version="4.4.10" targetFramework="net452" />
+  <package id="NLog.Config" version="4.4.10" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.4.10" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net452" />
 </packages>
