--- a/TenthModule/UnityAOP/ScannerManager/ScannerManager.csproj
+++ b/TenthModule/UnityAOP/ScannerManager/ScannerManager.csproj
@@ -124,6 +124,12 @@
     <None Include="Commands\uninstall.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
