--- a/TenthModule/UnityAOP/ScannerManager/packages.config
+++ b/TenthModule/UnityAOP/ScannerManager/packages.config
@@ -3,6 +3,8 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="NLog" version="4.4.10" targetFramework="net452" />
+  <package id="NLog.Config" version="4.4.10" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.4.10" targetFramework="net452" />
   <package id="PDFsharp-MigraDoc-GDI" version="1.32.4334.0" targetFramework="net452" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
   <package id="Topshelf.NLog" version="4.0.3" targetFramework="net452" />
