--- a/TenthModule/PostSharpAOP/CustomMessaging/CustomMessaging.csproj
+++ b/TenthModule/PostSharpAOP/CustomMessaging/CustomMessaging.csproj
@@ -79,6 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="CustomMessaging.psproj" />
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
