--- a/TenthModule/PostSharpAOP/MessagingService/MessagingService.csproj
+++ b/TenthModule/PostSharpAOP/MessagingService/MessagingService.csproj
@@ -67,7 +67,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="MessagingService.psproj" />
-    <None Include="NLog.config" />
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
