--- a/TenthModule/PostSharpAOP/CustomMessaging/packages.config
+++ b/TenthModule/PostSharpAOP/CustomMessaging/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="NLog" version="4.4.10" targetFramework="net452" />
+  <package id="NLog.Config" version="4.4.10" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.4.10" targetFramework="net452" />
   <package id="PostSharp" version="4.3.33" targetFramework="net452" />
   <package id="PostSharp.Patterns.Diagnostics" version="4.3.33" targetFramework="net452" />
   <package id="PostSharp.Patterns.Diagnostics.NLog" version="4.3.33" targetFramework="net452" />
