--- a/TenthModule/PostSharpAOP/ScannerManager/ScannerManager.csproj
+++ b/TenthModule/PostSharpAOP/ScannerManager/ScannerManager.csproj
@@ -114,7 +114,12 @@
     <None Include="Commands\uninstall.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="NLog.config" />
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="ScannerManager.psproj" />
   </ItemGroup>
